# cs5804-10k-sentiment-analysis

./: .gitignore  README.md  correlation.py  correlation_summary_full.json  edgar_requests.py  get_growth.py  historical_data.py  pyproject.toml  requirements.txt  requirements_dev.txt  sentiment_analyzer.py  sentiment_growth_summary.py  sentiment_growth_summary_json.py  sentiment_growth_summary_output_all.json  sentiment_scores.json
historical_data/nasdaq/: HistoricalData_aapl.csv  HistoricalData_adm.csv  HistoricalData_amzn.csv  HistoricalData_bac.csv  HistoricalData_brka.csv  HistoricalData_c.csv  HistoricalData_cah.csv  HistoricalData_ci.csv  HistoricalData_cmcsa.csv  HistoricalData_cnc.csv  HistoricalData_cor.csv  HistoricalData_cost.csv  HistoricalData_cvs.csv  HistoricalData_cvx.csv  HistoricalData_dell.csv  HistoricalData_dis.csv  HistoricalData_elv.csv  HistoricalData_et.csv  HistoricalData_f.csv  HistoricalData_fdx.csv  HistoricalData_fmcc.csv  HistoricalData_fnma.csv  HistoricalData_gm.csv  HistoricalData_googl.csv  HistoricalData_gs.csv  HistoricalData_hd.csv  HistoricalData_hum.csv  HistoricalData_jnj.csv  HistoricalData_jpm.csv  HistoricalData_kr.csv  HistoricalData_low.csv  HistoricalData_mck.csv  HistoricalData_meta.csv  HistoricalData_mpc.csv  HistoricalData_ms.csv  HistoricalData_msft.csv  HistoricalData_pep.csv  HistoricalData_pg.csv  HistoricalData_psx.csv  HistoricalData_t.csv  (+10 more)
historical_data/polygon/: HistoricalData_aapl.csv  (+1 more)
output_files/: growth.json  return_correlations.json
resources/: edgar_tickers.json  ms_info.txt  tickers.txt
