[project]
name = "cs5804-10k-sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "bs4>=0.0.2",
    "hf-xet>=1.1.0",
    "requests>=2.32.3",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "pandas>=2.2.3",
    "polygon-api-client>=1.14.5",
    "transformers>=4.51.3",
    "torch>=2.7.0",
    "hf-xet>=1.1.0"
]
